# p2f-client-py

./: .gitignore  CHANGELOG.md  README.md  client_library_testing.ipynb  pyproject.toml
.github/workflows/: pypi-publish.yml
Pliocene_SSTs/: PlioVAR-KM5c_T.tab  link
p2f_client/: __init__.py  conn.py  datasets.py  doi.py  harm_age.py  harm_data_record.py  harm_data_types.py  harm_location.py  harm_numerical.py  harm_reference.py  harm_species.py  harm_timeslice.py  keywords.py  link_git.py  p2f_client.py  season.py  seasonality.py
