[project]
name = "p2f-client-py"
version = "0.0.1"
description = "API Client library for the Past to Future project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furl>=2.1.4",
    "p2f-pydantic",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
p2f-pydantic = { git = "https://github.com/Past-to-Future-EU-Horizon/p2f-pydantic" }
