[project]
name = "p2f-client-py"
version = "0.0.17"
description = "API Client library for the Past to Future project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furl>=2.1.4",
    "jupyter>=1.1.1",
    "p2f-pydantic",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
authors = [
    { name="Garrett Speed", email="g.t.speed@uu.nl"} 
]

[project.urls]
Homepage = "https://github.com/Past-to-Future-EU-Horizon/p2f-client-py"

[tool.setuptools.packages.find]
exclude = ["Pliocene_SSTs"]
